# tabby-lite

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.example.yml  docker-compose.yml  manage.py  package-lock.json  package.json  passenger_wsgi.py  postcss.config.js  pyproject.toml  render.yaml
.github/workflows/: docker-image.yml
account/: apps.py  middleware.py  urls.py  views.py
account/templates/: base.html
account/templates/account/: layout.html  login.html  login_success.html  onboarding.html
api/: urls.py  views.py
ballot/: urls.py
ballot/ballot/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ballot/ballot/lib/: api.ts
ballot/ballot/pages/: Dashboard.tsx
ballot/ballot/src/: App.tsx  Layout.tsx  router.tsx
ballot/ballot/types/: round.ts
ballot/static/ballot/: index.html  manifest.json
ballot/templates/ballot/: index.html
deploy/: README.md  nginx.passenger.conf
docs/: INSTALL.md
round/: admin.py  apps.py  cache_helpers.py  emoji_unicode.txt  emojis.py  models.py  pos_wordlist_generate.py  process_emoji.py  tasks.py  urls.py  utils.py  views.py  wordlist.json
round/migrations/: 0001_initial.py  0002_ballotpairing_completed.py  0003_config_pendingsubmission.py  0004_potentialteamperson.py
round/static/: input.css  tailwind.css
round/static/help/: ballot.html
round/templates/: 404.html  500.html
round/templates/rounds/: ballot.html  (+6 more)
round/tests/: __init__.py  test_assign_teams_to_potential_persons.py  test_demo_and_lightmode.py  test_light_mode.py  test_utils_cache.py  test_views.py
tabby_lite/: __init__.py  asgi.py  celery.py  celery_app.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
