[project]
name = "tabby-lite"
version = "0.1.0"
description = ""
authors = [
    {name = "Dalton Ma",email = "85321730+bohrium2b@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-vite (>=3.1.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "regex (>=2026.2.28,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
