[project]
name = "tabby-lite"
version = "0.1.0"
description = "A lightweight wrapper on Tabbycat for debate tournaments"
authors = [
    {name = "Dalton Ma",email = "85321730+bohrium2b@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-vite (>=3.1.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "regex (>=2026.2.28,<2027.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "tabby-lite"
version = "0.1.0"
## Compatibility: some Poetry versions expect a `[tool.poetry]` table.
## Duplicate minimal metadata from the PEP 621 `[project]` table so
## `poetry install` inside the Docker image recognizes the package.
description = ""
authors = ["Dalton Ma <85321730+bohrium2b@users.noreply.github.com>"]
readme = "README.md"